; ModuleID = '/home/carl/AnghaBench/kphp-kdb/net/extr_net-http-client.c_htc_close_connection.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/net/extr_net-http-client.c_htc_close_connection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32 }
%struct.TYPE_2__ = type { i32 (%struct.connection*, i32)* }

@outbound_http_connections = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @htc_close_connection(%struct.connection* %0, i32 %1) #0 {
  %3 = alloca %struct.connection*, align 8
  %4 = alloca i32, align 4
  store %struct.connection* %0, %struct.connection** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @outbound_http_connections, align 4
  %6 = add nsw i32 %5, -1
  store i32 %6, i32* @outbound_http_connections, align 4
  %7 = load %struct.connection*, %struct.connection** %3, align 8
  %8 = call i32 @server_reader(%struct.connection* %7)
  %9 = load %struct.connection*, %struct.connection** %3, align 8
  %10 = call %struct.TYPE_2__* @HTC_FUNC(%struct.connection* %9)
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32 (%struct.connection*, i32)*, i32 (%struct.connection*, i32)** %11, align 8
  %13 = icmp ne i32 (%struct.connection*, i32)* %12, null
  br i1 %13, label %14, label %22

14:                                               ; preds = %2
  %15 = load %struct.connection*, %struct.connection** %3, align 8
  %16 = call %struct.TYPE_2__* @HTC_FUNC(%struct.connection* %15)
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32 (%struct.connection*, i32)*, i32 (%struct.connection*, i32)** %17, align 8
  %19 = load %struct.connection*, %struct.connection** %3, align 8
  %20 = load i32, i32* %4, align 4
  %21 = call i32 %18(%struct.connection* %19, i32 %20)
  br label %22

22:                                               ; preds = %14, %2
  %23 = load %struct.connection*, %struct.connection** %3, align 8
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @client_close_connection(%struct.connection* %23, i32 %24)
  ret i32 %25
}

declare dso_local i32 @server_reader(%struct.connection*) #1

declare dso_local %struct.TYPE_2__* @HTC_FUNC(%struct.connection*) #1

declare dso_local i32 @client_close_connection(%struct.connection*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
